# vantier-ecommerce

./: .gitignore  README.md
.codex/: config.toml
backend/: pyproject.toml
backend/src/: main.py
backend/src/core/: dependencies.py
backend/src/features/orders/: schemas.py  service.py
backend/src/features/uploads/: router.py
backend/src/features/users/: service.py
backend/src/integrations/: resend_client.py
backend/tests/features/users/: test_users.py
frontend/src/: main.ts
frontend/src/features/about/: AboutPage.vue
frontend/src/features/account/components/: AccountPage.vue  AddressCard.vue
frontend/src/features/admin/: routes.ts
frontend/src/features/admin/inventory/: store.ts
frontend/src/features/admin/orders/: types.ts
frontend/src/features/admin/personalizations/: routes.ts
frontend/src/features/auth/: store.ts
frontend/src/features/auth/components/: LoginPage.vue
frontend/src/features/cart/: store.ts  types.ts
frontend/src/features/cart/components/: CartDrawer.vue  CartEmpty.vue  CartItem.vue  CartPage.vue  (+2 more)
frontend/src/features/checkout/: api.ts  store.ts
frontend/src/features/contact/: ContactPage.vue
frontend/src/features/uploads/: api.ts
frontend/src/pages/: AdminLayout.vue  StorefrontLayout.vue
frontend/src/shared/components/: AnnouncementBar.vue  AppFooter.vue  FreeShippingBar.vue  LocaleSelector.vue  ToastContainer.vue
frontend/src/shared/composables/: useCurrency.ts
frontend/src/shared/i18n/: index.ts
frontend/src/shared/utils/: formatters.ts  geo.ts
frontend/tests/unit/shared/: useCurrency.spec.ts
(+46 files in other folders)
